@@ -1,5 +1,7 @@
 *SVN*
 
+* Use String#chars in TextHelper::excerpt. Closes #6386 [Manfred Stienstra]
+
 * Install named routes into ActionView::Base instead of proxying them to the view via helper_method. Closes #5932. [Nicholas Seckar]
 
 * Update to latest Prototype and script.aculo.us trunk versions [Thomas Fuchs]
@@ -10,7 +12,6 @@
 
 * render_text may optionally append to the response body. render_javascript appends by default. This allows you to chain multiple render :update calls by setting @performed_render = false between them (awaiting a better public API).  [Jeremy Kemper]
 
->>>>>>> .r5282
 * Rename test assertion to prevent shadowing. Closes #6306. [psross]
 
 * Fixed that NumberHelper#number_to_delimiter should respect precision of higher than two digits #6231 [phallstrom]
